src/parserHandler/QTLParser.java
// $ANTLR 3.5 QTL.g 2013-04-04 16:16:23

package parserHandler;

import java.util.HashMap;
import delegateTranslator.*;
import formulae.*;
import java.io.FileOutputStream;
import java.io.OutputStream;
import java.io.PrintStream;
import java.io.FileNotFoundException;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings("all")
public class QTLParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND_OP", "ATOM", "COLON", "F_OP", 
		"F_inf_OP", "G_OP", "G_inf_OP", "H_OP", "ID", "IFF_OP", "IMPL_OP", "INT", 
		"LBRA", "LOGIC", "LPAR", "NEG_OP", "NEWLINE", "OR_OP", "P_OP", "RBRA", 
		"RELEASE_OP", "RPAR", "SEMI", "SINCE_OP", "TRIGGER_OP", "UNTIL_OP", "WS", 
		"':bound'", "':def'", "':formula'"
	};
	public static final int EOF=-1;
	public static final int T__31=31;
	public static final int T__32=32;
	public static final int T__33=33;
	public static final int AND_OP=4;
	public static final int ATOM=5;
	public static final int COLON=6;
	public static final int F_OP=7;
	public static final int F_inf_OP=8;
	public static final int G_OP=9;
	public static final int G_inf_OP=10;
	public static final int H_OP=11;
	public static final int ID=12;
	public static final int IFF_OP=13;
	public static final int IMPL_OP=14;
	public static final int INT=15;
	public static final int LBRA=16;
	public static final int LOGIC=17;
	public static final int LPAR=18;
	public static final int NEG_OP=19;
	public static final int NEWLINE=20;
	public static final int OR_OP=21;
	public static final int P_OP=22;
	public static final int RBRA=23;
	public static final int RELEASE_OP=24;
	public static final int RPAR=25;
	public static final int SEMI=26;
	public static final int SINCE_OP=27;
	public static final int TRIGGER_OP=28;
	public static final int UNTIL_OP=29;
	public static final int WS=30;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public QTLParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public QTLParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	@Override public String[] getTokenNames() { return QTLParser.tokenNames; }
	@Override public String getGrammarFileName() { return "QTL.g"; }


	/** Map variable name to Integer object holding value */
	HashMap<String, Formula> memory = new HashMap<String,Formula>();

	TLParserHandler p ;



	// $ANTLR start "tlparser"
	// QTL.g:27:1: tlparser : l= logic NEWLINE ':bound' INT NEWLINE ( declaration )* ':formula' fmla NEWLINE ;
	public final void tlparser() throws RecognitionException {
		Token INT1=null;
		String l =null;
		Formula fmla2 =null;

		try {
			// QTL.g:27:9: (l= logic NEWLINE ':bound' INT NEWLINE ( declaration )* ':formula' fmla NEWLINE )
			// QTL.g:27:11: l= logic NEWLINE ':bound' INT NEWLINE ( declaration )* ':formula' fmla NEWLINE
			{
			pushFollow(FOLLOW_logic_in_tlparser35);
			l=logic();
			state._fsp--;

			match(input,NEWLINE,FOLLOW_NEWLINE_in_tlparser37); 
			 
							if (l.equals("qtl"))
								p = new QTLParserHandler();					 
					 	
			match(input,31,FOLLOW_31_in_tlparser48); 
			INT1=(Token)match(input,INT,FOLLOW_INT_in_tlparser50); 
			match(input,NEWLINE,FOLLOW_NEWLINE_in_tlparser52); 

							p.setHistoryLength(Integer.valueOf((INT1!=null?INT1.getText():null)));
							System.out.println("Starting parsing formulae...");
						
			// QTL.g:37:4: ( declaration )*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==NEWLINE||LA1_0==32) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// QTL.g:37:4: declaration
					{
					pushFollow(FOLLOW_declaration_in_tlparser62);
					declaration();
					state._fsp--;

					}
					break;

				default :
					break loop1;
				}
			}

			match(input,33,FOLLOW_33_in_tlparser68); 
			pushFollow(FOLLOW_fmla_in_tlparser70);
			fmla2=fmla();
			state._fsp--;

							
						
								
							p.setCLTLTranslator(CLTLTranslatorEnum.AE2ZOT);
							
							
							FileOutputStream f0 = null;
							
							try {
								f0 = new FileOutputStream("output.cltl");
							} catch (FileNotFoundException e) {
								e.printStackTrace();
							}
							
							if (f0 != null){
								PrintStream prn = new PrintStream(f0);		
								prn.println(p.translate(fmla2, CLTLTranslatorEnum.AE2ZOT));
							}
							else
								System.out.println("Opps...some errors occurred!");					
						
			match(input,NEWLINE,FOLLOW_NEWLINE_in_tlparser77); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "tlparser"



	// $ANTLR start "logic"
	// QTL.g:62:1: logic returns [String s] : COLON LOGIC ;
	public final String logic() throws RecognitionException {
		String s = null;


		Token LOGIC3=null;

		try {
			// QTL.g:63:2: ( COLON LOGIC )
			// QTL.g:63:4: COLON LOGIC
			{
			match(input,COLON,FOLLOW_COLON_in_logic92); 
			LOGIC3=(Token)match(input,LOGIC,FOLLOW_LOGIC_in_logic94); 
			 s = new String((LOGIC3!=null?LOGIC3.getText():null)); 
			}

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return s;
	}
	// $ANTLR end "logic"



	// $ANTLR start "declaration"
	// QTL.g:66:1: declaration : ( ':def' s= ID fmla NEWLINE | NEWLINE );
	public final void declaration() throws RecognitionException {
		Token s=null;
		Formula fmla4 =null;

		try {
			// QTL.g:66:12: ( ':def' s= ID fmla NEWLINE | NEWLINE )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==32) ) {
				alt2=1;
			}
			else if ( (LA2_0==NEWLINE) ) {
				alt2=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// QTL.g:66:14: ':def' s= ID fmla NEWLINE
					{
					match(input,32,FOLLOW_32_in_declaration108); 
					s=(Token)match(input,ID,FOLLOW_ID_in_declaration112); 
					pushFollow(FOLLOW_fmla_in_declaration118);
					fmla4=fmla();
					state._fsp--;


								 	memory.put((s!=null?s.getText():null), fmla4);
								 
					match(input,NEWLINE,FOLLOW_NEWLINE_in_declaration131); 
					}
					break;
				case 2 :
					// QTL.g:72:5: NEWLINE
					{
					match(input,NEWLINE,FOLLOW_NEWLINE_in_declaration137); 
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
	}
	// $ANTLR end "declaration"



	// $ANTLR start "fmla"
	// QTL.g:75:1: fmla returns [Formula r] : ( ID | ATOM | LPAR NEG_OP f1= fmla RPAR | LPAR AND_OP f1= fmla f2= fmla RPAR | LPAR OR_OP f1= fmla f2= fmla RPAR | LPAR IMPL_OP f1= fmla f2= fmla RPAR | LPAR IFF_OP f1= fmla f2= fmla RPAR | LPAR F_OP a= INT b= INT f1= fmla RPAR | LPAR F_inf_OP a= INT f1= fmla RPAR | LPAR op= G_OP a= INT b= INT f1= fmla RPAR | LPAR op= G_inf_OP a= INT f1= fmla RPAR | LPAR UNTIL_OP f1= fmla f2= fmla RPAR | LPAR SINCE_OP f1= fmla f2= fmla RPAR | LPAR RELEASE_OP f1= fmla f2= fmla RPAR | LPAR TRIGGER_OP f1= fmla f2= fmla RPAR );
	public final Formula fmla() throws RecognitionException {
		Formula r = null;


		Token a=null;
		Token b=null;
		Token op=null;
		Token ID5=null;
		Token ATOM6=null;
		Token F_OP7=null;
		Token F_inf_OP8=null;
		Formula f1 =null;
		Formula f2 =null;

		try {
			// QTL.g:76:2: ( ID | ATOM | LPAR NEG_OP f1= fmla RPAR | LPAR AND_OP f1= fmla f2= fmla RPAR | LPAR OR_OP f1= fmla f2= fmla RPAR | LPAR IMPL_OP f1= fmla f2= fmla RPAR | LPAR IFF_OP f1= fmla f2= fmla RPAR | LPAR F_OP a= INT b= INT f1= fmla RPAR | LPAR F_inf_OP a= INT f1= fmla RPAR | LPAR op= G_OP a= INT b= INT f1= fmla RPAR | LPAR op= G_inf_OP a= INT f1= fmla RPAR | LPAR UNTIL_OP f1= fmla f2= fmla RPAR | LPAR SINCE_OP f1= fmla f2= fmla RPAR | LPAR RELEASE_OP f1= fmla f2= fmla RPAR | LPAR TRIGGER_OP f1= fmla f2= fmla RPAR )
			int alt3=15;
			switch ( input.LA(1) ) {
			case ID:
				{
				alt3=1;
				}
				break;
			case ATOM:
				{
				alt3=2;
				}
				break;
			case LPAR:
				{
				switch ( input.LA(2) ) {
				case NEG_OP:
					{
					alt3=3;
					}
					break;
				case AND_OP:
					{
					alt3=4;
					}
					break;
				case OR_OP:
					{
					alt3=5;
					}
					break;
				case IMPL_OP:
					{
					alt3=6;
					}
					break;
				case IFF_OP:
					{
					alt3=7;
					}
					break;
				case F_OP:
					{
					alt3=8;
					}
					break;
				case F_inf_OP:
					{
					alt3=9;
					}
					break;
				case G_OP:
					{
					alt3=10;
					}
					break;
				case G_inf_OP:
					{
					alt3=11;
					}
					break;
				case UNTIL_OP:
					{
					alt3=12;
					}
					break;
				case SINCE_OP:
					{
					alt3=13;
					}
					break;
				case RELEASE_OP:
					{
					alt3=14;
					}
					break;
				case TRIGGER_OP:
					{
					alt3=15;
					}
					break;
				default:
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 3, 3, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 3, 0, input);
				throw nvae;
			}
			switch (alt3) {
				case 1 :
					// QTL.g:76:6: ID
					{
					ID5=(Token)match(input,ID,FOLLOW_ID_in_fmla161); 
								
								if (memory.containsKey((ID5!=null?ID5.getText():null))){
									r = memory.get((ID5!=null?ID5.getText():null));					
								}
								
							
					}
					break;
				case 2 :
					// QTL.g:83:6: ATOM
					{
					ATOM6=(Token)match(input,ATOM,FOLLOW_ATOM_in_fmla172); 
							
								Formula f = new QTLAtom((ATOM6!=null?ATOM6.getText():null));
								r = p.addFormula(f);
							
					}
					break;
				case 3 :
					// QTL.g:88:4: LPAR NEG_OP f1= fmla RPAR
					{
					match(input,LPAR,FOLLOW_LPAR_in_fmla183); 
					match(input,NEG_OP,FOLLOW_NEG_OP_in_fmla185); 
					pushFollow(FOLLOW_fmla_in_fmla189);
					f1=fmla();
					state._fsp--;

					match(input,RPAR,FOLLOW_RPAR_in_fmla191); 
						
								Formula f = new QTLNegation((QTLFormula) f1);
								r = p.addFormula(f);
							
					}
					break;
				case 4 :
					// QTL.g:93:6: LPAR AND_OP f1= fmla f2= fmla RPAR
					{
					match(input,LPAR,FOLLOW_LPAR_in_fmla203); 
					match(input,AND_OP,FOLLOW_AND_OP_in_fmla205); 
					pushFollow(FOLLOW_fmla_in_fmla209);
					f1=fmla();
					state._fsp--;

					pushFollow(FOLLOW_fmla_in_fmla213);
					f2=fmla();
					state._fsp--;

					match(input,RPAR,FOLLOW_RPAR_in_fmla215); 
						
								Formula f = new QTLConjunction((QTLFormula)f1,(QTLFormula)f2);
								r = p.addFormula(f);
							
					}
					break;
				case 5 :
					// QTL.g:98:6: LPAR OR_OP f1= fmla f2= fmla RPAR
					{
					match(input,LPAR,FOLLOW_LPAR_in_fmla226); 
					match(input,OR_OP,FOLLOW_OR_OP_in_fmla228); 
					pushFollow(FOLLOW_fmla_in_fmla232);
					f1=fmla();
					state._fsp--;

					pushFollow(FOLLOW_fmla_in_fmla236);
					f2=fmla();
					state._fsp--;

					match(input,RPAR,FOLLOW_RPAR_in_fmla238); 
						
								Formula f = QTLFormula.or((QTLFormula)f1, (QTLFormula)f2);
								r = p.addFormula(f);	
							
					}
					break;
				case 6 :
					// QTL.g:103:6: LPAR IMPL_OP f1= fmla f2= fmla RPAR
					{
					match(input,LPAR,FOLLOW_LPAR_in_fmla249); 
					match(input,IMPL_OP,FOLLOW_IMPL_OP_in_fmla251); 
					pushFollow(FOLLOW_fmla_in_fmla255);
					f1=fmla();
					state._fsp--;

					pushFollow(FOLLOW_fmla_in_fmla259);
					f2=fmla();
					state._fsp--;

					match(input,RPAR,FOLLOW_RPAR_in_fmla261); 
						
								Formula f = QTLFormula.implies((QTLFormula)f1, (QTLFormula)f2);
								r = p.addFormula(f);	
							
					}
					break;
				case 7 :
					// QTL.g:108:6: LPAR IFF_OP f1= fmla f2= fmla RPAR
					{
					match(input,LPAR,FOLLOW_LPAR_in_fmla272); 
					match(input,IFF_OP,FOLLOW_IFF_OP_in_fmla274); 
					pushFollow(FOLLOW_fmla_in_fmla278);
					f1=fmla();
					state._fsp--;

					pushFollow(FOLLOW_fmla_in_fmla282);
					f2=fmla();
					state._fsp--;

					match(input,RPAR,FOLLOW_RPAR_in_fmla284); 
						
								Formula f = QTLFormula.iff((QTLFormula)f1, (QTLFormula)f2);
								r = p.addFormula(f);		
							
					}
					break;
				case 8 :
					// QTL.g:113:6: LPAR F_OP a= INT b= INT f1= fmla RPAR
					{
					match(input,LPAR,FOLLOW_LPAR_in_fmla296); 
					F_OP7=(Token)match(input,F_OP,FOLLOW_F_OP_in_fmla298); 
					a=(Token)match(input,INT,FOLLOW_INT_in_fmla302); 
					b=(Token)match(input,INT,FOLLOW_INT_in_fmla306); 
					pushFollow(FOLLOW_fmla_in_fmla310);
					f1=fmla();
					state._fsp--;

					match(input,RPAR,FOLLOW_RPAR_in_fmla312); 
						
								Formula f;
								String s = String.valueOf((F_OP7!=null?F_OP7.getText():null));
								
								if (s.compareTo("F_ee") == 0)
									f = QTLFormula.F((QTLFormula)f1, Integer.valueOf((a!=null?a.getText():null)), Bounds.OPEN, Integer.valueOf((b!=null?b.getText():null)), Bounds.OPEN); 
								else if (s.compareTo("F_ei") == 0)
									f = QTLFormula.F((QTLFormula)f1, Integer.valueOf((a!=null?a.getText():null)), Bounds.OPEN, Integer.valueOf((b!=null?b.getText():null)), Bounds.CLOSED); 
								else if (s.compareTo("F_ie") == 0)	
									f = QTLFormula.F((QTLFormula)f1, Integer.valueOf((a!=null?a.getText():null)), Bounds.CLOSED, Integer.valueOf((b!=null?b.getText():null)), Bounds.OPEN); 
								else
									f = QTLFormula.F((QTLFormula)f1, Integer.valueOf((a!=null?a.getText():null)), Bounds.CLOSED, Integer.valueOf((b!=null?b.getText():null)), Bounds.CLOSED);
								
									 
								r = p.addFormula(f);
							
					}
					break;
				case 9 :
					// QTL.g:130:6: LPAR F_inf_OP a= INT f1= fmla RPAR
					{
					match(input,LPAR,FOLLOW_LPAR_in_fmla324); 
					F_inf_OP8=(Token)match(input,F_inf_OP,FOLLOW_F_inf_OP_in_fmla326); 
					a=(Token)match(input,INT,FOLLOW_INT_in_fmla330); 
					pushFollow(FOLLOW_fmla_in_fmla334);
					f1=fmla();
					state._fsp--;

					match(input,RPAR,FOLLOW_RPAR_in_fmla336); 
						
								Formula f;
								String s = String.valueOf((F_inf_OP8!=null?F_inf_OP8.getText():null));
								
								if (s.compareTo("F_e+") == 0)
									f = QTLFormula.F((QTLFormula)f1, Integer.valueOf((a!=null?a.getText():null)), Bounds.OPEN); 
								else
									f = QTLFormula.F((QTLFormula)f1, Integer.valueOf((a!=null?a.getText():null)), Bounds.CLOSED); 
								
									 
								r = p.addFormula(f);
							
					}
					break;
				case 10 :
					// QTL.g:143:6: LPAR op= G_OP a= INT b= INT f1= fmla RPAR
					{
					match(input,LPAR,FOLLOW_LPAR_in_fmla350); 
					op=(Token)match(input,G_OP,FOLLOW_G_OP_in_fmla354); 
					a=(Token)match(input,INT,FOLLOW_INT_in_fmla358); 
					b=(Token)match(input,INT,FOLLOW_INT_in_fmla362); 
					pushFollow(FOLLOW_fmla_in_fmla366);
					f1=fmla();
					state._fsp--;

					match(input,RPAR,FOLLOW_RPAR_in_fmla368); 
						
								Formula f;
								String s = String.valueOf((op!=null?op.getText():null));
								
								if (s.compareTo("G_ee") == 0)
									f = QTLFormula.G((QTLFormula)f1, Integer.valueOf((a!=null?a.getText():null)), Bounds.OPEN, Integer.valueOf((b!=null?b.getText():null)), Bounds.OPEN); 
								else if (s.compareTo("G_ei") == 0)
									f = QTLFormula.G((QTLFormula)f1, Integer.valueOf((a!=null?a.getText():null)), Bounds.OPEN, Integer.valueOf((b!=null?b.getText():null)), Bounds.CLOSED); 
								else if (s.compareTo("G_ie") == 0)	
									f = QTLFormula.G((QTLFormula)f1, Integer.valueOf((a!=null?a.getText():null)), Bounds.CLOSED, Integer.valueOf((b!=null?b.getText():null)), Bounds.OPEN); 
								else
									f = QTLFormula.G((QTLFormula)f1, Integer.valueOf((a!=null?a.getText():null)), Bounds.CLOSED, Integer.valueOf((b!=null?b.getText():null)), Bounds.CLOSED);
								
									 
								r = p.addFormula(f);
							
					}
					break;
				case 11 :
					// QTL.g:160:6: LPAR op= G_inf_OP a= INT f1= fmla RPAR
					{
					match(input,LPAR,FOLLOW_LPAR_in_fmla380); 
					op=(Token)match(input,G_inf_OP,FOLLOW_G_inf_OP_in_fmla384); 
					a=(Token)match(input,INT,FOLLOW_INT_in_fmla388); 
					pushFollow(FOLLOW_fmla_in_fmla392);
					f1=fmla();
					state._fsp--;

					match(input,RPAR,FOLLOW_RPAR_in_fmla394); 
						
								Formula f;
								String s = String.valueOf((op!=null?op.getText():null));
								
								if (s.compareTo("G_e+") == 0)
									f = QTLFormula.G((QTLFormula)f1, Integer.valueOf((a!=null?a.getText():null)), Bounds.OPEN); 
								else
									f = QTLFormula.G((QTLFormula)f1, Integer.valueOf((a!=null?a.getText():null)), Bounds.CLOSED); 
								
									 
								r = p.addFormula(f);
							
					}
					break;
				case 12 :
					// QTL.g:173:6: LPAR UNTIL_OP f1= fmla f2= fmla RPAR
					{
					match(input,LPAR,FOLLOW_LPAR_in_fmla410); 
					match(input,UNTIL_OP,FOLLOW_UNTIL_OP_in_fmla412); 
					pushFollow(FOLLOW_fmla_in_fmla416);
					f1=fmla();
					state._fsp--;

					pushFollow(FOLLOW_fmla_in_fmla420);
					f2=fmla();
					state._fsp--;

					match(input,RPAR,FOLLOW_RPAR_in_fmla422); 

								Formula f = new QTLUntil((QTLFormula)f1,(QTLFormula)f2);
								r = p.addFormula(f);
							
					}
					break;
				case 13 :
					// QTL.g:178:6: LPAR SINCE_OP f1= fmla f2= fmla RPAR
					{
					match(input,LPAR,FOLLOW_LPAR_in_fmla434); 
					match(input,SINCE_OP,FOLLOW_SINCE_OP_in_fmla436); 
					pushFollow(FOLLOW_fmla_in_fmla440);
					f1=fmla();
					state._fsp--;

					pushFollow(FOLLOW_fmla_in_fmla444);
					f2=fmla();
					state._fsp--;

					match(input,RPAR,FOLLOW_RPAR_in_fmla446); 

								Formula f = new QTLSince((QTLFormula)f1,(QTLFormula)f2);
								r = p.addFormula(f);
							
					}
					break;
				case 14 :
					// QTL.g:183:6: LPAR RELEASE_OP f1= fmla f2= fmla RPAR
					{
					match(input,LPAR,FOLLOW_LPAR_in_fmla460); 
					match(input,RELEASE_OP,FOLLOW_RELEASE_OP_in_fmla462); 
					pushFollow(FOLLOW_fmla_in_fmla466);
					f1=fmla();
					state._fsp--;

					pushFollow(FOLLOW_fmla_in_fmla470);
					f2=fmla();
					state._fsp--;

					match(input,RPAR,FOLLOW_RPAR_in_fmla472); 

								Formula f = QTLFormula.R((QTLFormula)f1,(QTLFormula)f2);
								r = p.addFormula(f);
							
					}
					break;
				case 15 :
					// QTL.g:188:6: LPAR TRIGGER_OP f1= fmla f2= fmla RPAR
					{
					match(input,LPAR,FOLLOW_LPAR_in_fmla484); 
					match(input,TRIGGER_OP,FOLLOW_TRIGGER_OP_in_fmla486); 
					pushFollow(FOLLOW_fmla_in_fmla490);
					f1=fmla();
					state._fsp--;

					pushFollow(FOLLOW_fmla_in_fmla494);
					f2=fmla();
					state._fsp--;

					match(input,RPAR,FOLLOW_RPAR_in_fmla496); 

								Formula f = QTLFormula.T((QTLFormula)f1,(QTLFormula)f2);
								r = p.addFormula(f);
							
					}
					break;

			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
		}
		finally {
			// do for sure before leaving
		}
		return r;
	}
	// $ANTLR end "fmla"

	// Delegated rules


